# ukrainian-premier-league-discord-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/ukrainian_premier_league_discord_bot/: __init__.py  attackers.py  bot.py  cache.py  cli.py  config.py  fixtures.py  standings.py  upl.py
